unit_3/css/style.css
@import url('https://fonts.googleapis.com/css?family=Parisienne|Petit+Formal+Script');
@import url('https://fonts.googleapis.com/css?family=Slabo+27px');


*{
	padding:0;
	margin:0;
}



header {
	background-color: #fff2fc;
	color: #989b96;
	font-size: 28px;
	
}

#headerpic {
	padding-left: 40px;
	padding-top: 40px;
	
}

h4 {
	font-size: 30px;
}

main {
	font-family: 'Petit+Formal+Script', serif; 
	color: #989b96;
	font-size: 28px;
	padding: 0px 150px 40px 80px;
	font-weight: normal;
	background: linear-gradient(to bottom, #fff2fc 0%, #ffffff 100%);

}

p {
	font-family: 'Petit+Formal+Script', serif; 
	padding: 5px 90px 5px 90px;
	text-align: center;
	
}

ul {
	text-align: left; 
	padding-left: 145px;
	padding-top: 20px;
	line-height: 34px;

}
	
li { 
	font-family: 'Slabo 27px', serif; 
	font-size: 26px;
	text-align: left;
	padding-top: 10px;
	padding-left: 15px;
	line-height: 28px;
	list-style-position: inside;
}



hr {
	padding: 0px 20px;
	
}


a {
	text-decoration: underline;
	color: #989b96;
}


.favorites {
	font-family: 'Petit+Formal+Script', serif; 
	font-size: 28px;
	text-align: left;
	margin: 20px 40px;
	padding-bottom: 20px;
}


#lcquote {
	text-align: center;
	padding: 18px 225px;
	line-height: 45px;
}


.learnmore {
	font-family: serif;
	width: 100%;
	padding: 15px 25px;
	text-align: center;

}


}

.mepics {
	padding-left: 0px;
}

#coffee {

	position: absolute;
	width: 200px;
	height: 200px;
	padding-left: 365px;
	padding-top: 120px;

}

#rose {

	position: absolute;
	width: 500px;
	height: 375px;
	padding-left: 572px;
	padding-top: 20px;

}


#penny {

	position: absolute;
	width: 250px;
	height: 333px;
	padding-left: 1080px;
	padding-top: 45px;

}



footer {
	font-size: 18px;
	background-color: #ffffff;
	color: #989b96;
	text-align: center;
	padding-top: 300px;
	padding-bottom: 40px;

}

